Add .gitignore, update main class, enhance task and log files, and improve Pomodoro menu functionality